order dans liste, debut style liste

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,27 +13,26 @@ $light-gray: #D1DADE;   // Default label, badget
 $label-badget-color: #5E5E5E;
 $light-blue:#f3f6fb;
 
+$lighter-bg: #ffffff;
+$border-color: #e7eaec;
+
 // Spiner color and margin
 $spin-color: $teal;
 $spin-margin: 0 auto;
 
 
-// IBOX colors ( default panel colors)
-$border-color: #e7eaec;     // IBox border
-$ibox-title-bg:#ffffff;     // IBox Background header
-$ibox-content-bg:#ffffff;   // IBox Background content
-
-//Sidebar width
 $sidebar-width: 260px;
 
-// Boxed layout width
-$boxed-width: 1200px;
-$boxed-backgound: url('patterns/shattered.png');
+$default-padding: 14px;
+
+$body-bg: $gray;
 
 //Border radius for buttons
 $btn-border-radius: 3px;
 
 //Navigation
 $nav-bg: #2F4050;
-$nav-profil-pattern: url("patterns/header-profile.png") no-repeat;
 $nav-text-color: #a7b1c2;
+
+//OVERRIDES DE BOOT MOÉ LA STRAP
+// $font-size-base: 12px !default;
