--- a/src/scss/layout/_base.scss
+++ b/src/scss/layout/_base.scss
@@ -1,16 +1,20 @@
 
 html, body {
-    height: 100%;
+    // height: 100%;
 }
 
 #main-wrapper{
 	width:100%;
 	overflow-x:hidden;
-	background: $gray;
+	background: $body-bg;
 }
 
 .main-content{
 	position:relative;
 	padding-left: $sidebar-width;
 
+}
+
+.padded-content{
+	padding: $default-padding;
 }
