--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,15 +7,22 @@
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 
-
 @import "base/variables";
 
+$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+
+@import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
+
+
 @import "layout/base";
+@import "base/typography";
+
 @import "components/navigation";
+@import "components/header";
+@import "components/list-records";
 // @import "mixins";
 
 // // INSPINIA Theme Elements
-// @import "typography";
 // @import "navigation";
 // // @import "top_navigation";
 // @import "buttons";
@@ -48,16 +55,7 @@
 // // Your custom style to override base style
 // @import "custom";
 
-// Clear layout on print mode
-@media print {
-  nav.navbar-static-side {
-    display: none;
-  }
 
-  #page-wrapper {
-    margin: 0;
-  }
-}
 
 
 
