--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -46,6 +46,28 @@
 		}
 	}
 
+	td.list-functions{
+		.btn{
+			margin-right: 10px;
+			position:relative;
+			span{
+				display:none;
+				position:absolute;
+				top: 0;
+				left: 50%;
+				transform: translate(-50%, -110%);
+				border-radius: 4px;
+				background: #000;
+				padding: 3px 5px;
+				
+			}
+			&:hover{
+				span{
+					display:block;
+				}
+			}
+		}
+	}
 
 	td.modification{
 		font-size:10px;
