--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/navigation";
 @import "components/header";
 @import "components/list-records";
+@import "components/form";
 // @import "mixins";
 
 // // INSPINIA Theme Elements
