new sub records : highest order

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -33,6 +33,7 @@ $btn-border-radius: 3px;
 //Navigation
 $nav-bg: #2F4050;
 $nav-text-color: #a7b1c2;
+$nav-badge-color: $blue;
 
 //OVERRIDES DE BOOT MOÉ LA STRAP
 // $font-size-base: 12px !default;
