--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,10 +1,18 @@
 
 header{
 	
-	padding: 16px;
+	padding: 16px 16px 0 16px;
 	background: $lighter-bg;
-	border-bottom: 1px $border-color solid;
+	border: 1px $border-color solid;
+	border-width: 1px 0;
+	
+	.table-help{
+		color: $gray-57;
+		font-size: 12px;
+		margin: 12px 0;
+	}
 
+	
 	&#main-header{
 		display:flex;
 		justify-content: space-between;
