display subforms meme si record is new

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,10 +5,11 @@ $lazur: #23c6c8;      // Info color
 $yellow: #f8ac59;     // Warrning color
 $red: #ED5565;        // Danger color
 
-$gray-45: #676a6c;
-$gray-57: #888888;
+$gray-45: #686b6c;
+$gray-57: #86898a;
+$gray-70: #a9acad;
 $gray-78: #c2c2c2;
-$gray-86: #D1DADE;
+$gray-86: #d4d8d9;
 $gray-93: #e7eaec;
 $gray-96: #f3f3f4;
 
