--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -9,7 +9,7 @@
 
 	header{
 		background:none;
-		border-bottom-color: $gray-45;
+		border-bottom-color: $gray-70;
 
 		.fcn{
 			float:right;
@@ -18,6 +18,23 @@
 
 	}
 
+}
+
+.subform-list{
+	.add-record{
+		margin: 10px;
+		width: 100%;
+		text-align:center;
+		display:block;
+		height: 60px;
+		border: 6px $gray-93 solid;
+		background: $gray-96;
+	}
+}
+
+.single-record{
+	padding: $default-padding;
+	border-bottom: 1px $gray-86 solid;
 }
 
 .field{
@@ -77,7 +94,7 @@ $tab-border-radius: 4px;
 	margin: 2px 3px 0 3px;
 	height: 40px;
 	display:inline-block;
-	border:1px $gray-57 solid;
+	border:1px $gray-70 solid;
 	// border-bottom:0;
 	padding:10px 20px;
 	border-radius: $tab-border-radius $tab-border-radius 0 0;
@@ -87,7 +104,7 @@ $tab-border-radius: 4px;
 
 	&:hover {
 		background: $gray-86;
-		border-color: $gray-57;
+		border-color: $gray-70;
 		color: $gray-57;
 	}
 
