--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/header";
 @import "components/list-records";
 @import "components/form";
+@import "components/buttons";
 // @import "mixins";
 
 // // INSPINIA Theme Elements
