--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -8,4 +8,94 @@
 		left: 0;
 
 	width: 250px;
+	min-height: 100vh;
+
+	ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+
+		li {
+			display: block;
+		}
+	}
+
+	a {
+		color: $color-text-secondary;
+	}
+
+	.table-group {
+		display: block;
+		padding: 10px 15px;
+		position: relative;
+
+		cursor: pointer;
+
+		i + .nav-label {
+			margin-left: 10px;
+		}
+
+		&:hover {
+			background: $color-background-dark_hover;
+		}
+	}
+
+	.nav-item {
+		padding: 0;
+
+		a {
+			display: block;
+			position: relative;
+			padding: 10px 50px 10px 10px;
+			background: mix($white, $color-accent-primary, 20%);
+
+			.nrecords {
+				display: block;
+				text-align: center;
+				position: absolute;
+					top: 0;
+					right: 0;
+
+				width: 40px;
+				height: 100%;
+				background: mix($white, $color-accent-primary, 10%);
+
+				.n {
+					position: absolute;
+						top: 50%;
+						left: 0;
+
+					width: 100%;
+					transform: translate(0, -50%);
+				}
+			}
+		}
+
+		& + .nav-item {
+			border-top: 1px solid $color-accent-primary;
+		}
+	}
+
+	.nav-group {
+		border-top: 1px solid $color-border-dark;
+		overflow: hidden;
+
+		.sub-nav {
+			height: 0;
+			border-left: 6px solid $color-accent-primary;
+			background: lighten($color-background-dark, 10%);
+
+			.table-group {
+				padding: 10px 15px;
+			}
+
+			.sub-nav {
+				border-left: 0;
+			}
+		}
+
+		&:last-child {
+			border-bottom: 1px solid $color-border-dark;
+		}
+	}
 }
