--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -12,6 +12,7 @@ $screen-md-max: 1300px;
 	$gray51: #79797a;
 	$gray76: #bababb;
 	$gray90: #e1e1e1;
+	$gray93: #e7eaec;
 	$gray96: #f3f3f3;
 
 	$teal62: #19aa8d;
@@ -32,6 +33,7 @@ $screen-md-max: 1300px;
 	$color-accent-secondary: $teal62;
 
 	$color-background-light: $white;
+	$color-background-main: $gray93;
 	$color-background-dark: $blue26;
 	$color-background-dark_hover: $blue23;
 
