--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -13,7 +13,8 @@
 
 	.user {
 		padding: 40px 25px;
-		background: $color-background-dark;
+		background: url(../img/user-bg.jpg) bottom right no-repeat;
+		background-size: cover;
 		font-weight: $font-weight-bold;
 
 		p {
