--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,5 +19,6 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "base/_texts";
 
 @import "components/navbar";
+@import "components/header";
 
 @import "layout/_default";
