Loaded records stick

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,6 +3,10 @@
 $screen-lg: 1301px;
 $screen-md-max: 1300px;
 
+$header-height: 60px;
+$nav-width: 250px;
+$records-width: 350px;
+
 
 //==============================================================================
 // COLOR DEFS
