--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,11 @@
 #main-header {
 	padding: 15px 25px;
 	background: $gray96;
-	position: relative;
+	position: absolute;
+		top: 0;
+		right: 0;
+	width: calc(100% - #{$nav-width});
+	height: $header-height;
 
 	.logout {
 		position: absolute;
