--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,5 +20,6 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 @import "components/navbar";
 @import "components/header";
+@import "components/loaded-records";
 
 @import "layout/_default";
