Single form WIP

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,6 +15,7 @@ $records-width: 350px;
 	$gray43: #62666c;
 	$gray51: #79797a;
 	$gray76: #bababb;
+	$gray86: #d4d8d9;
 	$gray90: #e1e1e1;
 	$gray93: #e7eaec;
 	$gray96: #f3f3f3;
