--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,5 +22,6 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/navbar";
 @import "components/header";
 @import "components/loaded-records";
+@import "components/root-form";
 
 @import "layout/_default";
