--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,3 +24,10 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/loaded-records";
 
 @import "layout/_default";
+
+
+//STYLES TEMPORAIRE MART pour la dev; Peuvent être deletés lorsque remplacés
+
+.warn {
+	color:red;
+}
