--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -51,12 +51,36 @@
 	}
 }
 
+%circle_button {
+	text-align: center;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 100%;
+
+	padding: 0;
+
+	i {
+		margin: 0;
+	}
+
+	&[class*=small] {
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+	}
+}
+
 
 [class^=button] {
 	@extend %base_button;
 
 	&[class*=round] {
 		@extend %round_button;
+	}
+
+	&[class*=circle] {
+		@extend %circle_button;
 	}
 
 	&[class*=warn] {
