--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "base/_texts";
 
 @import "components/buttons";
+@import "components/form";
 @import "components/navbar";
 @import "components/header";
 @import "components/loaded-records";
