--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,6 +13,7 @@ $records-width: 350px;
 //==============================================================================
 	$gray31: #4a4a4a;
 	$gray43: #62666c;
+	$gray45: #686b6c;
 	$gray51: #79797a;
 	$gray76: #bababb;
 	$gray86: #d4d8d9;
@@ -52,7 +53,7 @@ $records-width: 350px;
 
 	$color-border-dark: $blue23;
 
-	$color-text-primary: $black;
+	$color-text-primary: $gray45;
 	$color-text-secondary: $white;
 
 
