--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/header";
 @import "components/loaded-records";
 @import "components/root-form";
+@import "components/_react-datepicker";
 
 @import "layout/_default";
 
