--- a/src/scss/base/_texts.scss
+++ b/src/scss/base/_texts.scss
@@ -3,16 +3,18 @@
 	line-height: 1;
 	margin: 0;
 	font-family: $font-family-title;
-	text-transform: uppercase;
+	text-transform: none;
+	font-weight: $font-weight-light;
 }
 
 %title1 {
 	@extend %title;
+	margin-bottom: 10px;
 }
 
 %title2 {
 	@extend %title;
-
+	margin-bottom: 40px;
 	//font-size: 100px;
 }
 
