--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -14,6 +14,10 @@ input[role="combobox"] {
 	margin: 10px 0;
 }
 
+input[type="checkbox"] + label {
+
+}
+
 label {
 	font-weight: $font-weight-bold;
 	text-align: right;
@@ -21,4 +25,8 @@ label {
 	display: block;
 	height: 55px;
 	line-height: 55px;
+}
+
+.mce-tinymce {
+	margin: 10px 0 !important;
 }
