--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -1,5 +1,7 @@
 
 .root-form {
+	position: relative;
+
 	> header {
 		padding: 25px 40px;
 		background: $color-background-light;
@@ -7,6 +9,7 @@
 		border-bottom: 1px solid $gray86;
 		margin-bottom: 60px;
 		position: relative;
+		width: 100%;
 
 		font-size: 0;
 
@@ -87,4 +90,10 @@
 	> .single-record {
 		padding: 0 150px;
 	}
+}
+
+.mtm-category {
+	text-align: right;
+	margin: 20px 0 10px;
+	padding-right: 30px + $grid-gutter-width / 2;
 }
