--- a/src/scss/components/_subform.scss
+++ b/src/scss/components/_subform.scss
@@ -8,6 +8,12 @@
 			top: 20px;
 			right: 0;
 	}
+
+	h2:nth-of-type(n+2) {
+		margin-top: 40px;
+		padding-top: 40px;
+		border-top: 1px solid $gray86;
+	}
 }
 
 
