--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -17,3 +17,35 @@
 		transform: translate(0, -50%);
 	}
 }
+
+.record-header {
+	padding: 25px 40px;
+	background: $color-background-light;
+	border-top: 1px solid $gray86;
+	border-bottom: 1px solid $gray86;
+	margin-bottom: 60px;
+	position: relative;
+	width: 100%;
+
+	font-size: 0;
+
+	.texts, .btns {
+		display: inline-block;
+		vertical-align: middle;
+		@extend %text_default;
+	}
+
+	.texts {
+		width: calc(100% - 275px);
+		padding-right: 30px;
+	}
+
+	.btns {
+		width: 275px;
+		padding-left: 30px;
+
+		[class^=button] + [class^=button] {
+			margin-left: 10px;
+		}
+	}
+}
