--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,7 +25,8 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/loaded-records";
 @import "components/root-form";
 @import "components/subform";
-@import "components/_react-datepicker";
+@import "components/home-button";
+@import "components/react-datepicker";
 
 @import "layout/_default";
 
