--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/loaded-records";
 @import "components/root-form";
 @import "components/subform";
+@import "components/list-records";
 @import "components/_react-datepicker";
 
 @import "layout/_default";
