--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -1,10 +1,25 @@
 
+.padded-content {
+	padding: 0 150px;
+}
+
 .list-records {
 	width: 100%;
+	margin-top: 20px;
 
-	th {
+	th, td {
 		text-align: left;
 		border-bottom: 1px solid $gray86;
+		border-top: 1px solid $gray86;
+		background: $white;
+
+		&:first-child {
+			border-left: 1px solid $gray86;
+		}
+
+		&:last-child {
+			border-right: 1px solid $gray86;
+		}
 	}
 
 	th {
@@ -13,5 +28,14 @@
 
 	td {
 		padding: 20px;
+		vertical-align: middle;
+	}
+
+	@for $i from 1 through 5 {
+		tr.level-#{$i} {
+			td:first-child {
+				padding-left: 20px * $i;
+			}
+		}
 	}
 }
