--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -1,6 +1,9 @@
 
 .padded-content {
-	padding: 0 150px;
+	width: 1200 / 1655 * 100%;
+	margin-left: auto;
+	margin-right: auto;
+	//padding: 0 150px;
 }
 
 .list-records {
