--- a/src/scss/components/_root-form.scss
+++ b/src/scss/components/_root-form.scss
@@ -89,7 +89,9 @@
 	}
 
 	> .single-record {
-		padding: 0 150px;
+		width: 1200 / 1655 * 100%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 
