--- a/src/scss/layout/_default.scss
+++ b/src/scss/layout/_default.scss
@@ -3,6 +3,7 @@
 .main-content {
 	padding-top: $header-height;
 	padding-left: $nav-width;
-	padding-right: $records-width;
 	background: $color-background-main;
+
+	transition: padding 0.3s;
 }
