--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -18,6 +18,11 @@
 
 		transform: translate(0, -50%);
 	}
+
+	.nav-toggler {
+		@extend %base_button;
+		@extend %round_button;
+	}
 }
 
 .record-header {
