--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -19,7 +19,7 @@
 		transform: translate(0, -50%);
 	}
 
-	.nav-toggler {
+	.nav-toggler, .loaded-records-toggler {
 		@extend %base_button;
 		@extend %round_button;
 	}
