--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/root-form";
 @import "components/subform";
 @import "components/list-records";
+@import "components/pagination";
 @import "components/_react-datepicker";
 
 @import "layout/_default";
