--- a/src/scss/components/_list-records.scss
+++ b/src/scss/components/_list-records.scss
@@ -65,4 +65,52 @@
 			}
 		}
 	}
+
+	@include at-most(1736px) {
+		.list-functions {
+			[class^=button] {
+				display: block;
+				width: 100%;
+				text-align: center;
+
+				& + [class^=button] {
+					margin-left: 0;
+					margin-top: 10px;
+				}
+			}
+		}
+	}
+
+	@include at-most(1150px) {
+		.interactions .orders [class^=button] {
+			display: block;
+			& + [class^=button] {
+				margin-top: 10px;
+				margin-left: 0;
+			}
+		}
+	}
+
+
+	@include at-most($screen-sm-max) {
+		.interactions {
+			width: 250px;
+
+			.list-functions {
+				margin: 30px 0;
+			}
+
+			.orders {
+				text-align: center;
+				[class^=button] {
+					display: inline-block;
+					+ [class^=button] {
+						margin-top: 0;
+						margin-left: 20px;
+					}
+				}
+			}
+		}
+
+	}
 }
