--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "components/list-records";
 @import "components/pagination";
 @import "components/_react-datepicker";
+@import "components/_login";
 
 @import "layout/_default";
 
