Spacing in loaded records

--- a/src/scss/components/_loaded-records.scss
+++ b/src/scss/components/_loaded-records.scss
@@ -46,6 +46,10 @@
 		margin-top: 5px;
 	}
 
+	& + .loaded-record {
+		margin-top: 20px;
+	}
+
 	[class^=button] + [class^=button] {
 		margin-left: 15px;
 	}
