--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_mixins";
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/_tooltip";
+//@import "~bootstrap-sass/assets/stylesheets/bootstrap/_tooltip";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_grid";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_normalize";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding";
